<resources>
    <string name="app_name">SportsApp</string>
    <string name="register_mail">E-Mail</string>
    <string name="register_username">Username</string>
    <string name="register_password">Password</string>
    <string name="register_password_confirm">Confirm Password</string>
    <string name="register_button">Register</string>
    <string name="change_to_login">Already have an account? <u>Log in!</u></string>
    <string name="register_account">Fill out the form to create an account</string>
    <string name="change_to_register">New here? <u>Create an account!</u></string>
    <string name="login_account">Log in with your credentials</string>
    <string name="login_button">Log In</string>
    <string name="empty_text" />
    <string name="general_error">An error occurred.</string>
    <string name="register_password_wrong">Passwords do not match.</string>
    <string name="register_password_too_long">The password is too long.</string>
    <string name="register_username_too_long">The username is too long.</string>
    <string name="register_username_exists">A user with this name already exists!</string>
    <string name="login_username_exists">There is no such user with that name.</string>
    <string name="login_password">Username and password do not match.</string>
    <string name="title_activity_start_page">StartPage</string>
    <string name="title_recent">Recent</string>
    <string name="title_jams">Jams</string>
    <string name="title_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_image_description">The image uploaded by the user.</string>
    <string name="user_name_sample_text">Max Mustermann</string>
    <string name="title_activity_entry">EntryActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_browse">Browse</string>
    <string name="title_add">Add Location</string>
    <string name="location_add_title">Add Spot</string>
    <string name="location_add_street">Street</string>
    <string name="location_add_number">Nr.</string>
    <string name="location_add_postal_code">Postal Code</string>
    <string name="location_add_city">City</string>
    <!-- Request Codes -->
    <string name="location_permission_request_code">0</string>
    <string name="sports_type">Type</string>
    <string name="drop_down_select">Select option</string>
    <string name="create_spot">Create Spot</string>
    <string name="invalid_input_default">Invalid input!</string>
    <string name="title_activity_spot_detail">SpotDetailActivity</string>
    <string name="spot_title_type">Running</string>
    <string name="spot_title_city">Musterstadt</string>
    <string name="spot_detail_type">Running</string>
    <string name="no_content">No content available!</string>
    <string name="add_review">Write a review</string>
    <string name="review_creator_placeholder">MusterUser</string>
    <string name="review_title_placeholder">Ein toller Ort zum Trainieren!</string>
    <string name="review_date_placeholder">01.01.1990</string>
    <string name="review_description_placeholder">Ich war am Wochenende mit meinen 2 Cousinen da. Hat unglaublich viel Spaß gemacht und es gibt so viele Möglichkeiten, sich dort zu betätigen.</string>
    <string name="review_write_title">Write Review</string>
    <string name="write_review_title_hint">Enter Title</string>
    <string name="write_review_description_hint">Enter Description</string>
    <string name="submit">Submit</string>
    <string name="create_jam">Create Jam</string>
    <string name="date_picked">Date:</string>
    <string name="default_date">01.01.1990</string>
    <string name="start_time">Start Time:</string>
    <string name="end_time">End Time:</string>
    <string name="default_start_time">12:00</string>
    <string name="default_end_time">14:00</string>
    <string name="update_date_time">Update Jam</string>
    <string name="max_user_count">Maximum participants:</string>
    <string name="max_user_default">10</string>
    <string name="no_value">-</string>
    <string name="jam_default_participants">10</string>
    <string name="jam_active">Jam active!</string>
    <string name="join_jam">Join Jam</string>
    <string name="leave_jam">Leave Jam</string>
    <string name="jam">Jam</string>
    <string name="logout">Log Out</string>
    <string name="example_user">ExampleUser</string>
    <string name="example_participants">2 out of 10 Participants</string>
</resources>