<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_browse"
        android:icon="@drawable/ic_browse"
        android:title="@string/title_browse" />
    <item
        android:id="@+id/navigation_recommendation"
        android:icon="@drawable/ic_recommendation"
        android:title="@string/title_recent" />
    <item
        android:id="@+id/navigation_jams"
        android:icon="@drawable/ic_jams"
        android:title="@string/title_jams" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />

</menu>